# FastAPI_learning

./: .gitignore  pyproject.toml  test.sh
.github/workflows/: ci.yml
Day1/.github/workflows/: ci.yml
Day1/Day1_fastapi_assignment/: conftest.py  main.py
Day1/fastapi_assignment/: conftest.py  main.py  pyproject.toml
Day1/fastapi_assignment/app/models/: users.py
Day1/fastapi_assignment/app/schemas/: users.py
Day2/fastapi_assignment/: conftest.py  main.py
Day2/fastapi_assignment/app/models/: users.py
Day3/fastapi_assignment/: conftest.py  main.py
Day3/fastapi_assignment/app/models/: movies.py  users.py
Day3/fastapi_assignment/app/routers/: movies.py  users.py
Day3/fastapi_assignment/app/schemas/: users.py
Day3/fastapi_assignment/app/utils/: jwt.py
Day4/fastapi_assignment/: .env  conftest.py  main.py
Day4/fastapi_assignment/app/configs/: __init__.py  base.py  database.py
Day4/fastapi_assignment/app/models/: base.py  movies.py  users.py
Day4/fastapi_assignment/app/routers/: movies.py  users.py
Day4/fastapi_assignment/app/schemas/: movies.py  users.py
Day4/fastapi_assignment/app/utils/: auth.py  jwt.py
Day5/fastapi_assignment/: .env  conftest.py  main.py
Day5/fastapi_assignment/app/configs/: __init__.py  base.py  database.py
Day5/fastapi_assignment/app/models/: movies.py  users.py
Day5/fastapi_assignment/app/routers/: movies.py  users.py
Day5/fastapi_assignment/app/schemas/: movies.py  users.py
Day5/fastapi_assignment/app/utils/: auth.py  file.py  jwt.py
dbschema/: default.esdl
dbschema/migrations/: 00002-m1mbsuw.edgeql  00003-m1dl43d.edgeql
query/: asgi.py
query/app/: __init__.py
query/app/apis/v1/: meeting_router.py  participant_router.py  test_meeting_router_edgedb.py  test_meeting_router_mysql.py
query/app/configs/: __init__.py  base_config.py  tortoise_config.py
query/app/dtos/: create_meeting_response.py  create_participant_request.py  create_participant_response.py  get_meeting_response.py  update_meeting_request.py
query/app/queries/meeting/: get_meeting_by_url_code.edgeql  update_meeting_start_end_async_edgeql.py
query/app/service/: meeting_service_mysql.py  meting_service_edgedb.py
query/app/tests/apis/v1/: test_meeting_router_edgedb.py  test_meeting_router_mysql.py
query/app/tortoise_models/: base_model.py  meeting.py
query/app/utils/: base62.py
test/: temp.py  test_main.py
test/dbschema/: default.esdl
test/meetifyr/: asgi.py
test/meetifyr(더미 데이터 만드는 방법)/: asgi.py  scratch_12.py
test/meetifyr(더미 데이터 만드는 방법)/meetifyr_app/: __init__.py
test/meetifyr(더미 데이터 만드는 방법)/meetifyr_app/apis/v1/: meeting_router.py
test/meetifyr(더미 데이터 만드는 방법)/meetifyr_app/dtos/: create_meeting_response.py
test/meetifyr/_app/apis/v1/: meeting_router.py
test/meetifyr/_app/dtos/: create_meeting_response.py
test/meetifyr/app/apis/v1/: meeting_router.py
test/meetifyr/app/dtos/: create_meeting_response.py  frozen_config.py
test/meetifyr/app_meetifyr/apis/v1/: meeting_router.py
test/meetifyr/app_meetifyr/dtos/: create_meeting_response.py
test/meetifyr/meetifyr_app/dtos/: create_meeting_response.py
(+1 files in other folders)
