[tool.poetry]
name = "day1"
version = "0.1.0"
description = ""
authors = ["PJG8806 <jinguy39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.40.0"
fastapi = "^0.128.0"
pytest = "^9.0.2"
sqlalchemy = "^2.0.45"
path = "^17.1.1"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"
mypy = "1.13.0"
isort = "^7.0.0"
pytest = "^9.0.2"
coverage = "7.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true

[tool.coverage.run]
omit = ["*/test_*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"