[tool.poetry]
name = "FastAPI-app"
version = "0.1.0"
description = ""
authors = ["PJG8806 <jinguy39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.40.0"
fastapi = "^0.128.0"
pytest = "^9.0.2"
sqlalchemy = "^2.0.45"
path = "^17.1.1"
pydantic = "^2.12.5"
ruff = "^0.14.10"
orjson = "3.10.12"
examples = "^1.0.2"
uuid = "^1.30"
sqids = "0.5.1"
datetime = "^6.0"
python-multipart = "^0.0.21"
pybase62 = "^1.0.0"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
mypy = "1.13.0"
isort = "^7.0.0"
pytest = "^9.0.2"
coverage = "7.6.9"
black = "24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true

[tool.coverage.run]
omit = ["*/test_*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"