[tool.poetry]
name = "FastAPI-app"
version = "0.1.0"
description = ""
authors = ["PJG8806 <jinguy39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.40.0"
fastapi = "^0.128.0"
pytest = "^9.0.2"
sqlalchemy = "^2.0.45"
path = "^17.1.1"
pydantic = "^2.12.5"
ruff = "^0.14.10"
orjson = "3.10.12"
examples = "^1.0.2"
uuid = "^1.30"
sqids = "0.5.1"
datetime = "^6.0"
python-multipart = "^0.0.21"
pybase62 = "^1.0.0"
passlib = "^1.7.4"
cryptography = "44.0.0"
aerich = "0.8.1"
tomlkit = "0.13.2"
pydantic-settings = "2.7.1"
tortoise = "^0.1.1"
edgedb = "2.2.0"
httpx = "0.28.1"
oci-cli = "^3.71.4"
cast = "^0.1.1"
tortoise-orm = "^0.25.3"
aiomysql = "^0.3.2"
a = "^1.0"
annotated = "^0.0.2"

[tool.poetry.group.dev.dependencies]
mypy = "1.13.0"
isort = "^7.0.0"
pytest = "^9.0.2"
coverage = "7.6.9"
black = "24.10.0"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true
explicit_package_bases = true
mypy_path = ["."]
files = ["app"]

[tool.coverage.run]
omit = ["*/test_*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.aerich]
tortoise_orm = "query.app.configs.tortoise_config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
